# kinect_streamer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fix_memory.sh  kinect_demo  kinect_gui  kinect_recorder_gui
include/kinect/: kinect.hpp
include/kinect_streamer/: kinect_streamer.hpp
kinect_streamer_bin/: CMakeLists.txt  package.xml
kinect_streamer_bin/launch/: kinect.rviz  kinect_demo.launch  kinect_detect.launch  kinect_detect_dual.launch  kinect_record.launch  kinect_recorder.launch  kinect_recorder_multi.launch  kinect_viewer.launch  kinect_viewer_multi.launch
kinect_streamer_bin/scripts/: memory.sh
kinect_streamer_bin/src/: kinect_openpose.py
kinect_streamer_bin/src/nodes/: kinect_camera.cpp  kinect_camera_dual.cpp  kinect_input.py  kinect_recorder.cpp  kinect_recorder_cli.cpp  kinect_recorder_dual_cli.cpp  kinect_recorder_gui.cpp  kinect_recorder_multi_cli.cpp  kinect_tf.py  kinect_viewer_gui.cpp  kinect_viewer_multi_cli.cpp
kinect_streamer_bin/src/nodes/.old/: kinect_camera_dual copy.cpp
kinect_streamer_bin/src/nodes/old/: kinect_camera_dual copy.cpp  kinect_viewer.cpp
kinect_streamer_lib/: CMakeLists.txt  package.xml
kinect_streamer_lib/include/kinect_depth/: kinect_depth.h
kinect_streamer_lib/include/kinect_streamer/: kinect_streamer.hpp
kinect_streamer_lib/src/: kinect_demo.cpp  kinect_depth.cu  kinect_streamer.cpp
kinect_streamer_ros/: CMakeLists.txt  package.xml
kinect_streamer_ros/include/kinect_ros/: kinect_ros.hpp
kinect_streamer_ros/src/: kinect_ros.cpp
lib/: CMakeLists.txt
src/: kinect_openpose.cpp  kinect_openpose.py  kinect_read.cpp  kinect_recorder.cpp  kinect_recorder_gui.c  kinect_recorder_gui.cpp  kinect_streamer.cpp  kinect_test.cpp  kinect_viewer.cpp  kinect_viewer_gui.cpp  kinect_write.cpp  main.cpp
